[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worklog"
version = "1.0.0"
description = "Daily activity aggregator for solopreneurs -- git commits, annotations, and timeline reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "izag8216" }]
keywords = ["worklog", "activity", "git", "cli", "timeline", "freelancer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
worklog = "worklog.cli:cli"

[tool.setuptools.packages.find]
include = ["worklog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
